--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="secondaryLightColor">#fff5b7</color>
     <color name="secondaryDarkColor">#b19259</color>
     <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#FF575757</color>
+    <color name="generalBackground">#f3f4f3</color>
 </resources>
