--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,95 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/back_3_1">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/home_welcome_text"
-        android:layout_width="300dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/text_bg"
-        android:fontFamily="@font/crafty_girls"
-        android:includeFontPadding="false"
-        android:paddingStart="28dp"
-        android:paddingTop="20dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="10dp"
-        android:rotation="-10"
-        android:text="@string/welcome_text"
-        android:textColor="@color/secondaryTextColor"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />
+    <data>
 
-    <Button
-        android:id="@+id/home_start_button"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/crafty_girls"
-        android:text="@string/start_button"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="@color/secondaryDarkColor" />
+    </data>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/imageButton3"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/text_bg"
-        android:cropToPadding="true"
-        android:paddingStart="7dp"
-        android:paddingTop="7dp"
-        android:paddingEnd="7dp"
-        android:paddingBottom="7dp"
-        app:cornerRadius="3dp"
-        app:icon="@drawable/galerie_kl"
-        app:iconGravity="textEnd"
-        app:iconPadding="0dp"
-        app:iconTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toTopOf="@+id/home_start_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/primaryTextColor" />
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/home_constraint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/fragment_home_xml_home_constraint_scene">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_help"
-        app:tint="@color/primaryTextColor" />
+        <ImageView
+            android:id="@+id/home_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/back_3_1" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/crafty_girls"
-        android:text="Gallery"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toTopOf="@+id/imageButton3"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/home_welcome_text"
+            android:layout_width="300dp"
+            android:layout_height="160dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/text_bg"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:includeFontPadding="false"
+            android:paddingStart="35dp"
+            android:paddingTop="23dp"
+            android:paddingEnd="17dp"
+            android:paddingBottom="10dp"
+            android:rotation="-10"
+            android:text="@string/welcome_text"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_about" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/home_start_button"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:text="@string/start_button"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:rippleColor="@color/secondaryDarkColor" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/home_gallery_button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:cropToPadding="true"
+            android:paddingStart="7dp"
+            android:paddingTop="7dp"
+            android:paddingEnd="7dp"
+            android:paddingBottom="7dp"
+            app:backgroundTint="@color/primary"
+            app:icon="@drawable/galerie_kl"
+            app:iconGravity="textEnd"
+            app:iconPadding="0dp"
+            app:iconTint="@color/primaryTextColor"
+            app:layout_constraintBottom_toTopOf="@+id/home_start_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/primaryTextColor" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/home_about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:clickable="true"
+            app:backgroundTint="@color/primaryColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_help"
+            app:tint="@color/primaryTextColor" />
+
+        <TextView
+            android:id="@+id/home_gallery_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="-16dp"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:rotation="-26"
+            android:rotationX="11"
+            android:rotationY="8"
+            android:text="@string/gallery_text"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/home_gallery_button"
+            app:layout_constraintEnd_toStartOf="@+id/home_gallery_button"
+            app:layout_constraintTop_toTopOf="@+id/home_gallery_button"
+            app:layout_constraintVertical_bias="0.0" />
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
+</layout>
+
