--- a/app/src/main/res/layout/fragment_paint.xml
+++ b/app/src/main/res/layout/fragment_paint.xml
@@ -41,10 +41,10 @@
             android:layout_marginBottom="16dp"
             android:alpha="0.7"
             android:clickable="true"
-            app:tint="@color/secondaryTextColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="?attr/actionModeCloseDrawable" />
+            app:srcCompat="?attr/actionModeCloseDrawable"
+            app:tint="@color/secondaryTextColor" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
