--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/annie_use_your_telescope</item>
-        <item>@font/architects_daughter</item>
-        <item>@font/caveat_bold</item>
-        <item>@font/crafty_girls</item>
+        <item>@font/delius</item>
     </array>
 </resources>
