--- a/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
+++ b/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
@@ -26,16 +26,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:translationZ="20dp"
             motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
             android:translationY="-500dp" />
         <Constraint
             android:id="@+id/home_welcome_text"
             android:layout_width="300dp"
-            android:layout_height="160dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="16dp"
             motion:layout_constraintTop_toBottomOf="@+id/home_about"
             android:rotation="-10"
-            android:layout_marginStart="16dp"
             motion:layout_constraintStart_toStartOf="parent"
             android:translationY="-500dp"
             android:translationX="-200dp" />
@@ -72,17 +73,7 @@
             android:rotation="-26"
             motion:layout_constraintTop_toTopOf="@+id/home_gallery_button"
             android:translationX="-1000dp" />
-        <Constraint
-            android:id="@+id/home_background"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="0.0"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintHorizontal_bias="0.0"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:scaleX="30" />
+
         <Constraint
             android:id="@+id/home_background"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -107,15 +98,16 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             motion:layout_constraintTop_toTopOf="parent"
+            android:translationZ="20dp"
             android:layout_marginTop="16dp"
             android:translationY="0dp" />
         <Constraint
             android:id="@+id/home_welcome_text"
             android:layout_width="300dp"
-            android:layout_height="160dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="16dp"
             motion:layout_constraintTop_toBottomOf="@+id/home_about"
             android:rotation="-10"
-            android:layout_marginStart="16dp"
             motion:layout_constraintStart_toStartOf="parent"
             android:translationY="0dp"
             android:translationX="0dp" />
@@ -163,5 +155,6 @@
             motion:layout_constraintHorizontal_bias="0.0"
             motion:layout_constraintStart_toStartOf="parent"
             android:alpha="1"/>
+
     </ConstraintSet>
 </MotionScene>
