--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -17,8 +17,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/detail_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="100dp"
+            android:background="@color/light_green"
             android:clipToPadding="false"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
@@ -32,12 +32,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:background="@color/primaryColor"
+                android:background="@android:color/transparent"
                 android:paddingStart="8dp"
-                android:paddingTop="8dp"
+                android:paddingTop="55dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
-                android:src="@drawable/ic_delete"
+                android:src="@drawable/round_delete_24"
                 app:tint="@color/secondaryTextColor"
                 tools:layout_editor_absoluteX="363dp"
                 tools:layout_editor_absoluteY="4dp" />
@@ -47,13 +47,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:background="@color/primaryColor"
+                android:background="@android:color/transparent"
                 android:paddingStart="8dp"
-                android:paddingTop="8dp"
+                android:paddingTop="55dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
                 android:src="@drawable/ic_share"
-                app:tint="@color/secondaryTextColor"
+                android:tint="@color/secondaryTextColor"
                 tools:layout_editor_absoluteX="315dp"
                 tools:layout_editor_absoluteY="4dp" />
 
@@ -62,12 +62,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:background="@color/primaryColor"
+                android:background="@android:color/transparent"
                 android:paddingStart="0dp"
-                android:paddingTop="8dp"
+                android:paddingTop="55dp"
                 android:paddingEnd="8dp"
                 android:paddingBottom="8dp"
-                android:src="@drawable/ic_arrow_back"
+                android:src="@drawable/round_arrow_back_24"
                 app:tint="@color/secondaryTextColor"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="8dp" />
