--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -19,8 +19,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/gallery_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="100dp"
+            android:background="@color/light_green"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,12 +32,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:background="@color/primaryColor"
+                android:background="@android:color/transparent"
                 android:paddingStart="0dp"
-                android:paddingTop="8dp"
+                android:paddingTop="55dp"
                 android:paddingEnd="8dp"
                 android:paddingBottom="8dp"
-                android:src="@drawable/ic_arrow_back"
+                android:src="@drawable/round_arrow_back_24"
                 app:tint="@color/secondaryTextColor"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="8dp" />
