--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,105 +22,71 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
+            android:scaleX="1.17"
+            android:scaleY="1.17"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/back_3_1" />
-
-        <TextView
-            android:id="@+id/home_welcome_text"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="16dp"
-            android:background="@drawable/text_bg"
-            android:fontFamily="@font/delius"
-            android:includeFontPadding="false"
-            android:paddingStart="40dp"
-            android:paddingTop="28dp"
-            android:paddingEnd="20dp"
-            android:paddingBottom="10dp"
-            android:rotation="-10"
-            android:text="@string/welcome_text"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_about" />
+            app:srcCompat="@drawable/background" />
 
 
         <Button
             android:id="@+id/home_start_button"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:fontFamily="@font/delius"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="64dp"
+            android:capitalize="none"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/start_button"
+            android:textAllCaps="false"
             android:textColor="@color/primaryTextColor"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            app:backgroundTint="@color/light_blue"
+            app:cornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:rippleColor="@color/secondaryDarkColor" />
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/home_gallery_button"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:cropToPadding="true"
-            android:paddingStart="7dp"
-            android:paddingTop="7dp"
-            android:paddingEnd="7dp"
-            android:paddingBottom="7dp"
-            app:backgroundTint="@color/primary"
-            app:icon="@drawable/galerie_kl"
-            app:iconGravity="textEnd"
-            app:iconPadding="0dp"
-            app:iconTint="@color/primaryTextColor"
-            app:layout_constraintBottom_toTopOf="@+id/home_start_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/primaryTextColor" />
-
-
-        <TextView
-            android:id="@+id/home_gallery_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="-24dp"
-            android:fontFamily="@font/delius"
-            android:rotation="-26"
-            android:rotationX="11"
-            android:rotationY="8"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:text="@string/gallery_text"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toBottomOf="@+id/home_gallery_button"
-            app:layout_constraintEnd_toStartOf="@+id/home_gallery_button"
-            app:layout_constraintTop_toTopOf="@+id/home_gallery_button"
-            app:layout_constraintVertical_bias="0.0" />
+            android:textAllCaps="false"
+            android:textSize="12sp"
+            app:backgroundTint="@color/light_green"
+            app:cornerRadius="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/home_start_button"
+            app:layout_constraintEnd_toEndOf="@+id/home_start_button"
+            app:layout_constraintTop_toBottomOf="@+id/home_about"
+            app:layout_constraintVertical_bias="0.74" />
+
 
         <FrameLayout
             android:id="@+id/home_about_frame"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:alpha="0"
             android:background="@color/generalBackground"
-            android:translationZ="3dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:translationZ="2dp"
+            android:layout_marginTop="46dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
 
                 <TextView
@@ -129,10 +95,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/delius"
+                    android:fontFamily="sans-serif-light"
                     android:text="@string/about_text"
                     android:textColor="@color/secondaryTextColor"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
+                    android:justificationMode="inter_word"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -146,10 +113,11 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/delius"
+                    android:fontFamily="sans-serif-light"
                     android:text="@string/about_text2"
                     android:textColor="@color/secondaryTextColor"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
+                    android:justificationMode="inter_word"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/home_about_textview_1" />
@@ -158,36 +126,34 @@
                     android:id="@+id/home_art_view"
                     android:layout_width="250dp"
                     android:layout_height="200dp"
-                    android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="64dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="100dp"
                     android:alpha="1"
                     android:rotation="-10"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_2"
-                    app:layout_constraintVertical_bias="0.25"
-                    tools:srcCompat="@color/secondaryDarkColor" />
+                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <Button
             android:id="@+id/home_about"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:translationZ="20dp"
+            android:layout_width="80dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="64dp"
+            android:text="@string/about_button_text"
+            android:textAllCaps="false"
+            android:textSize="12sp"
             app:backgroundTint="@color/primaryColor"
+            app:cornerRadius="100dp"
+            android:translationZ="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_help"
-            app:tint="@color/primaryTextColor" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
