--- a/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
+++ b/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
@@ -26,20 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:translationZ="20dp"
             motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
             android:translationY="-500dp" />
-        <Constraint
-            android:id="@+id/home_welcome_text"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="16dp"
-            motion:layout_constraintTop_toBottomOf="@+id/home_about"
-            android:rotation="-10"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:translationY="-500dp"
-            android:translationX="-200dp" />
         <Constraint
             android:id="@+id/home_start_button"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -47,44 +36,20 @@
             android:layout_height="70dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
             android:translationY="200dp"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/home_gallery_button"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
             android:layout_marginBottom="16dp"
             motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
             android:layout_marginEnd="16dp"
             android:translationX="300dp" />
-        <Constraint
-            android:id="@+id/home_gallery_text"
-            motion:layout_constraintEnd_toStartOf="@+id/home_gallery_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rotationX="11"
-            android:rotationY="8"
-            motion:layout_constraintBottom_toBottomOf="@+id/home_gallery_button"
-            motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="-16dp"
-            android:rotation="-26"
-            motion:layout_constraintTop_toTopOf="@+id/home_gallery_button"
-            android:translationX="-1000dp" />
 
-        <Constraint
-            android:id="@+id/home_background"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="0.0"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintHorizontal_bias="0.0"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:alpha="0"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -96,65 +61,31 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             motion:layout_constraintTop_toTopOf="parent"
-            android:translationZ="20dp"
-            android:layout_marginTop="16dp"
-            android:translationY="0dp" />
-        <Constraint
-            android:id="@+id/home_welcome_text"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="16dp"
-            motion:layout_constraintTop_toBottomOf="@+id/home_about"
-            android:rotation="-10"
-            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="60dp"
             android:translationY="0dp"
-            android:translationX="0dp" />
+            motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/home_start_button"
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="65dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
             motion:layout_constraintStart_toStartOf="parent"
             android:translationY="0dp" />
         <Constraint
             android:id="@+id/home_gallery_button"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:layout_marginBottom="24dp"
+            android:layout_marginEnd="0dp"
             motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
-            android:layout_marginEnd="16dp"
-            android:translationX="0dp" />
-        <Constraint
-            android:id="@+id/home_gallery_text"
-            motion:layout_constraintEnd_toStartOf="@+id/home_gallery_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rotationX="11"
-            android:rotationY="8"
-            motion:layout_constraintBottom_toBottomOf="@+id/home_gallery_button"
-            motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="-16dp"
-            android:rotation="-26"
-            motion:layout_constraintTop_toTopOf="@+id/home_gallery_button"
-            android:translationX="0dp" />
-        <Constraint
-            android:id="@+id/home_background"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="0.0"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintHorizontal_bias="0.0"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:alpha="1"/>
-
+            motion:layout_constraintVertical_bias="0.74"
+            android:translationX="0dp"
+            motion:layout_constraintEnd_toEndOf="@id/home_start_button"
+            motion:layout_constraintTop_toBottomOf="@+id/home_about" />
     </ConstraintSet>
 </MotionScene>
