--- a/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
+++ b/app/src/main/res/xml/fragment_home_xml_home_constraint_scene.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
         android:id="@+id/home_transition"
+        motion:autoTransition="animateToEnd"
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="1000"
-        motion:autoTransition="animateToEnd">
-       <KeyFrameSet>
-           <KeyPosition
-               motion:framePosition="50"
-               motion:motionTarget="@+id/home_background"
-               android:alpha="1"/>
-       </KeyFrameSet>
+        motion:duration="1000">
+        <KeyFrameSet>
+            <KeyPosition
+                android:alpha="1"
+                motion:framePosition="50"
+                motion:motionTarget="@+id/home_background" />
+        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -22,70 +21,69 @@
 
         <Constraint
             android:id="@+id/home_about"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
-            android:translationY="-500dp" />
+            android:layout_marginEnd="16dp"
+            android:translationY="-500dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/home_start_button"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:translationY="200dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/home_gallery_button"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="108dp"
-            android:layout_height="108dp"
-            android:layout_marginBottom="16dp"
-            motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_marginEnd="16dp"
-            android:translationX="300dp" />
+            android:layout_marginBottom="16dp"
+            android:translationX="300dp"
+            motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
+            motion:layout_constraintEnd_toEndOf="parent" />
 
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
 
 
-
         <Constraint
             android:id="@+id/home_about"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="60dp"
             android:translationY="0dp"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/home_start_button"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="65dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:translationY="0dp" />
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="40dp"
+            android:translationY="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/home_gallery_button"
-            android:layout_width="108dp"
-            android:layout_height="108dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_marginEnd="0dp"
-            motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
-            motion:layout_constraintVertical_bias="0.74"
+            android:layout_marginBottom="24dp"
             android:translationX="0dp"
+            motion:layout_constraintBottom_toTopOf="@+id/home_start_button"
             motion:layout_constraintEnd_toEndOf="@id/home_start_button"
-            motion:layout_constraintTop_toBottomOf="@+id/home_about" />
+            motion:layout_constraintTop_toBottomOf="@+id/home_about"
+            motion:layout_constraintVertical_bias="0.74" />
     </ConstraintSet>
 </MotionScene>
