--- a/app/src/main/res/layout-sw600dp/fragment_paint.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paint.xml
@@ -10,7 +10,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/paint_control_card"
-            android:layout_width="match_parent"
+            android:layout_width="340dp"
             android:layout_height="130dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
@@ -20,7 +20,6 @@
             app:cardCornerRadius="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
