--- a/app/src/main/res/layout-sw600dp/fragment_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_detail.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/detail_delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:background="@android:color/transparent"
                 android:paddingStart="8dp"
                 android:paddingTop="55dp"
@@ -39,6 +39,7 @@
                 android:paddingBottom="24dp"
                 android:src="@drawable/round_delete_24"
                 app:tint="@color/secondaryTextColor"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck"
                 tools:layout_editor_absoluteX="363dp"
                 tools:layout_editor_absoluteY="4dp" />
 
@@ -46,14 +47,15 @@
                 android:id="@+id/detail_share_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:background="@android:color/transparent"
                 android:paddingStart="8dp"
                 android:paddingTop="55dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="24dp"
                 android:src="@drawable/ic_share"
-                android:tint="@color/secondaryTextColor"
+                app:tint="@color/secondaryTextColor"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck"
                 tools:layout_editor_absoluteX="315dp"
                 tools:layout_editor_absoluteY="4dp" />
 
@@ -61,7 +63,7 @@
                 android:id="@+id/detail_back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:background="@android:color/transparent"
                 android:paddingStart="0dp"
                 android:paddingTop="55dp"
@@ -69,6 +71,7 @@
                 android:paddingBottom="24dp"
                 android:src="@drawable/round_arrow_back_24"
                 app:tint="@color/secondaryTextColor"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="8dp" />
 
@@ -88,7 +91,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
             app:layout_constraintVertical_bias="1.0"
-            tools:src="@tools:sample/backgrounds/scenic" />
+            tools:src="@tools:sample/backgrounds/scenic"
+            tools:ignore="ContentDescription" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
