--- a/app/src/main/res/layout-sw600dp/fragment_home.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_home.xml
@@ -27,7 +27,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/background_large" />
+            app:srcCompat="@drawable/background_large"
+            tools:ignore="ContentDescription" />
 
 
         <com.google.android.material.button.MaterialButton
@@ -48,7 +49,8 @@
             app:cornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="VisualLintButtonSize" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/home_gallery_button"
@@ -104,7 +106,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.20" />
+                    app:layout_constraintVertical_bias="0.20"
+                    tools:targetApi="o" />
 
                 <TextView
                     android:id="@+id/home_about_textview_2"
@@ -120,7 +123,8 @@
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_1" />
+                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_1"
+                    tools:targetApi="o" />
 
                 <ImageView
                     android:id="@+id/home_art_view"
@@ -136,7 +140,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_2" />
+                    app:layout_constraintTop_toBottomOf="@+id/home_about_textview_2"
+                    tools:ignore="ContentDescription" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
