--- a/app/src/main/res/drawable/button_bg_red.xml
+++ b/app/src/main/res/drawable/button_bg_red.xml
@@ -10,8 +10,8 @@
     <gradient
         android:type="linear"
         android:angle="-90"
-        android:startColor="#FDD7D7"
-        android:endColor="@color/generalBackground"
+        android:startColor="#FBC8C8"
+        android:endColor="#F8E9E9"
         />
 
 </shape>
