--- a/app/src/main/res/layout-sw600dp/fragment_home.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_home.xml
@@ -27,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/background_large"
+            app:srcCompat="@drawable/background_big"
             tools:ignore="ContentDescription" />
 
 
