--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/generalBackground"
-    tools:context=".MainActivity">
+    tools:context="at.andrewagner.outdraw.MainActivity">
 
     <fragment
         android:id="@+id/nav_host_fragment"
